--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <nav id ="navbar">
+      <a href="#"></a>
+    </nav>
     <section id="welcome-section">
       <h1>welcome to our portifolio</h1>
     </section>
