--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <nav id ="navbar">
-      <a href="#projects"></a>
+      <a href="#">About</a>
+      <a href="#projects">Work</a>
+      <a href="#contact">Contact</a>
     </nav>
     <section id="welcome-section">
       <h1>welcome to our portifolio</h1>
     </section>
 	  <section id="projects">
-		  
+
 		  <div class="project-tile">
 			  <a href="#"></a>
 		  </div>
 	  </section>
-	  
-	  
+
+
 	  <section id="contact">
 	  	<a id="profile-link" target="_blank" href="https://github.com/Fig77">GitHub </a>
 	  	<a id="profile-link_1" target="_blank" href="https://github.com/Natyrix">GitHub </a>
 	  </section>
-	  
+
 
     <script  src="js/index.js"></script>
   </body>
