--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <nav id ="navbar">		
-      <a href="#">About</a>
-      <a href="#projects">Work</a>
-      <a href="#contact">Contact</a>
+    <nav id ="navbar">
+      <a href="#"><strong>About</strong></a>
+      <a href="#projects"><strong>Work</strong></a>
+      <a href="#contact"><strong>Contact</strong></a>
     </nav>
     <section id="welcome-section">
       <h1>welcome to our portifolio</h1>
