--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <section id="welcome-section">
       <h1>welcome to our portifolio</h1>
     </section>
+	  <section id="projects">
+		  <div class="project-tile">
+		  </div>
+	  </section>
 
     <script  src="js/index.js"></script>
   </body>
