finished welcome section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       <a href="#contact"><strong>Contact</strong></a>
     </nav>
     <section id="welcome-section">
-      <h1>welcome to our portifolio</h1>
+		<section id="section-inner">
+      <h1><strong>Welcome to our portifolio</strong></h1>
+		<h3>web developers</h3>
+		</section>
+		
     </section>
 	  <section id="projects">
 
